@@ -1,4 +1,6 @@
   [Michele Simionato]
+  * Fixed a bug with the minimum_magnitude feature and extended it to be
+    tectonic region type dependent
   * Changed the rupture generation to yield bunches of ruptures, thus avoiding
     the 4GB pickle limit
   * Parallelized the splitting of the sources, thus making the preprocessing
